# Endeavour

./: Endeavour.spec  Makefile  buildreq_cache  excludes  meson_options.txt  options.conf  upstream  used_libs
